fix overflow

--- a/VolunteerManager/main/static/css/advanced.css
+++ b/VolunteerManager/main/static/css/advanced.css
@@ -22,7 +22,7 @@ body
 
 .mdl-card,.mdl-card__supporting-text
 {
-    overflow: initial;
+    overflow: visible !important;
 }
 
 #volunteer-info-card
